[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Junsu Shin <junsushin4546@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/junsushin-dev/hello-wasm"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
wasm-bindgen = "0.2"